View Issue Details

IDProjectCategoryView StatusLast Update
0023736Open CASCADEOCCT:Data Exchangepublic2013-04-29 15:22
Reporterika Assigned Toika  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformAOSL 
Product Version6.5.4 
Target Version6.6.0Fixed in Version6.6.0 
Summary0023736: Exeption during reading STEP file in Test Harness
DescriptionExeption during reading STEP file in Test Harness
Steps To ReproduceReadStep Doc step_1_A1.stp
TagsNo tags attached.
Test case numberbugs xde(005) bug23736

Attached Files

  • step_1_A1.stp (14,738 bytes)

Activities

ika

2013-01-29 16:48

manager  

step_1_A1.stp (14,738 bytes)

ika

2013-01-29 17:06

manager   ~0023206

Add checking for null name and null id.

Git branch CR23736 is ready to be reviewed.

Dear GKA,
please review.

gka

2013-02-01 11:06

developer   ~0023228

Branch CR23736 is ready to test.

mkv

2013-02-05 17:15

tester   ~0023267

Dear BugMaster,

Branch CR237326 (and products from GIT master) was compiled on Linux and Windows platforms and tested.
SHA-1: c70e2da377f0fd4c27d8f8b5bdec706393346bde

Number of compiler warnings:

occt component :
Linux: 3 (3 on master)
Windows: 57 (57 on master)

products component :
Linux: 9 (9 on master)
Windows: 50 (50 on master)

Regressions:
No regressions

Improvements:
No improvements

Testing cases:
bugs xde(005) bug23736 - OK

Testing on Linux:
Total MEMORY difference: 231613044 / 231213632
Total CPU difference: 9158.760000000297 / 9782.389999999907

Testing on Windows:
Total MEMORY difference: 329251320 / 328400984
Total CPU difference: 12242.265625 / 12074.875

There are not serious differences in images found by testdiff.

Related Changesets

occt: master ab4a5554

2013-02-08 10:50:50

ika

Details Diff
0023736: Exeption during reading STEP file in Test Harness
Add checking for null name and null id
Adding of test cases for CR23736
Affected Issues
0023736
mod - src/STEPCAFControl/STEPCAFControl_Reader.cxx Diff File
add - tests/bugs/xde/bug23736 Diff File

Issue History

Date Modified Username Field Change
2013-01-29 16:48 ika New Issue
2013-01-29 16:48 ika Assigned To => ika
2013-01-29 16:48 ika File Added: step_1_A1.stp
2013-01-29 16:49 ika Status new => assigned
2013-01-29 17:06 ika Note Added: 0023206
2013-01-29 17:06 ika Assigned To ika => gka
2013-01-29 17:06 ika Status assigned => resolved
2013-02-01 11:06 gka Note Added: 0023228
2013-02-01 11:06 gka Status resolved => reviewed
2013-02-01 19:11 mkv Assigned To gka => mkv
2013-02-05 17:15 mkv Note Added: 0023267
2013-02-05 17:16 mkv Test case number => bugs xde(005) bug23736
2013-02-05 17:16 mkv Assigned To mkv => bugmaster
2013-02-05 17:16 mkv Status reviewed => tested
2013-02-11 17:42 ika Changeset attached => occt master ab4a5554
2013-02-11 17:42 ika Assigned To bugmaster => ika
2013-02-11 17:42 ika Status tested => verified
2013-02-11 17:42 ika Resolution open => fixed
2013-04-23 13:36 aiv Status verified => closed
2013-04-29 15:22 aiv Fixed in Version => 6.6.0