0023736: Exeption during reading STEP file in Test Harness Add checking for null name and null id Adding of test cases for CR23736